--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:device-app": "node dist/device-app/server/server.mjs"
+    "serve:ssr:device-app": "node dist/device-app/server/server.mjs",
+    "build:ssr": "ng build && ng run device-app:server",
+    "serve:ssr": "node dist/device-app/server/main.js"
   },
   "private": true,
   "dependencies": {
