--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,25 @@ server {
   listen 8080;
   server_name localhost;
 
+  # Serve static files
   root /usr/share/nginx/html;
   index index.html;
 
+  # Proxy API requests to Node SSR server
+  location /api/ {
+    proxy_pass http://localhost:4000;  # Assuming Node SSR listens on 4000
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+  }
+
+  # Serve Angular frontend
   location / {
     try_files $uri $uri/ /index.html;
   }
 
+  # Handle Angular routing
   error_page 404 /index.html;
 }
