--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,12 @@ server {
   listen 8080;
   server_name localhost;
 
-  # Serve static files
   root /usr/share/nginx/html;
   index index.html;
 
-  # Proxy API requests to Node SSR server
+  # Proxy API requests to Node server
   location /api/ {
-    proxy_pass http://localhost:4000;  # Assuming Node SSR listens on 4000
+    proxy_pass http://localhost:4000;  # Node server
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -16,11 +15,10 @@ server {
     proxy_cache_bypass $http_upgrade;
   }
 
-  # Serve Angular frontend
+  # Serve static files
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # Handle Angular routing
   error_page 404 /index.html;
 }
