--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:ssr": "ng build",
-    "kill-node": "killall -9 node",
-    "serve:ssr": "npm run kill-node && node dist/device-app/server/server.mjs"
+    "serve:ssr": "node dist/device-app/server/server.mjs",
+    "start": "node dist/device-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
