--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
 
   # Proxy API requests to Node container
   location /api/ {
-    proxy_pass http://node-ssr:4000;
+    proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
