--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,10 @@ server {
   listen 8080;
   server_name localhost;
 
+  # 🔥 Increase header & buffer limits:
+  client_header_buffer_size 16k;
+  large_client_header_buffers 4 32k;
+
   root /usr/share/nginx/html;
   index index.html;
 
