--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,10 @@ server {
   listen 8080;
   server_name localhost;
 
-  # 🔥 Increase header & buffer limits:
+  # 🟢 Increase limits to avoid 400 errors:
+  client_max_body_size 50M;
   client_header_buffer_size 16k;
-  large_client_header_buffers 4 32k;
+  large_client_header_buffers 8 64k;
 
   root /usr/share/nginx/html;
   index index.html;
@@ -17,6 +18,12 @@ server {
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
     proxy_cache_bypass $http_upgrade;
+
+    # Extra: Allow large request headers & bodies
+    proxy_buffers 16 64k;
+    proxy_buffer_size 128k;
+    proxy_busy_buffers_size 256k;
+    proxy_request_buffering off;
   }
 
   # Serve Angular frontend
