--- a/nginx.conf
+++ b/nginx.conf
@@ -14,9 +14,12 @@ server {
   location /api/ {
     proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
+    proxy_ssl_server_name on;
+    proxy_ssl_protocols TLSv1.2 TLSv1.3;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_cache_bypass $http_upgrade;
 
     # Extra: Allow large request headers & bodies
