--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,11 @@ server {
   listen 8080;
   server_name localhost;
 
-  # 🟢 Increase limits to avoid 400 errors:
+  # 🔥 Increase request & header size limits
   client_max_body_size 50M;
-  client_header_buffer_size 16k;
-  large_client_header_buffers 8 64k;
+  client_body_buffer_size 512k;
+  client_header_buffer_size 64k;
+  large_client_header_buffers 8 128k;
 
   root /usr/share/nginx/html;
   index index.html;
