--- a/nginx.conf
+++ b/nginx.conf
@@ -11,23 +11,31 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Proxy API requests to Node container
+  # Proxy API requests to Node SSR Cloud Run backend
   location /api/ {
     proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
+
     proxy_http_version 1.1;
-    proxy_set_header Host $host;
     proxy_ssl_server_name on;
     proxy_ssl_protocols TLSv1.2 TLSv1.3;
+
+    # Forward important headers
+    proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_cache_bypass $http_upgrade;
+    proxy_set_header Connection "";
 
-    # Extra: Allow large request headers & bodies
+    # Disable buffering for large requests
+    proxy_request_buffering off;
+
+    # Buffers for large headers & responses
     proxy_buffers 16 64k;
     proxy_buffer_size 128k;
     proxy_busy_buffers_size 256k;
-    proxy_request_buffering off;
+
+    # Avoid caching issues
+    proxy_cache_bypass $http_upgrade;
   }
 
   # Serve Angular frontend
