--- a/nginx.conf
+++ b/nginx.conf
@@ -2,11 +2,15 @@ server {
   listen 8080;
   server_name localhost;
 
+  proxy_read_timeout 3600; 
+  proxy_send_timeout 3600;
+  proxy_connect_timeout 3600;
+
   # 🔥 Increase request & header size limits
-  client_max_body_size 50M;
-  client_body_buffer_size 512k;
-  client_header_buffer_size 64k;
-  large_client_header_buffers 8 128k;
+  client_max_body_size 100M;          # Max body size
+  client_body_buffer_size 2M;         # Increased to 2MB
+  client_header_buffer_size 128k;     # Increased from 64k to 128k
+  large_client_header_buffers 16 256k; # Increased: 16 buffers, 256k each
 
   root /usr/share/nginx/html;
   index index.html;
@@ -26,13 +30,16 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Connection "";
 
+    # 🚨 Strip cookies:
+    proxy_set_header Cookie "";
+
     # Disable buffering for large requests
     proxy_request_buffering off;
 
     # Buffers for large headers & responses
-    proxy_buffers 16 64k;
-    proxy_buffer_size 128k;
-    proxy_busy_buffers_size 256k;
+    proxy_buffers 32 128k;
+    proxy_buffer_size 256k;
+    proxy_busy_buffers_size 512k;
 
     # Avoid caching issues
     proxy_cache_bypass $http_upgrade;
