--- a/nginx.conf
+++ b/nginx.conf
@@ -17,8 +17,7 @@ server {
 
   # Proxy API requests to Node SSR Cloud Run backend
   location /api/ {
-    # proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
-    proxy_pass http://localhost:4000;
+    proxy_pass https://node-ssr-426000542377.europe-west3.internal.run.app;
 
     proxy_http_version 1.1;
     proxy_ssl_server_name on;
@@ -41,9 +40,6 @@ server {
     proxy_buffers 32 128k;
     proxy_buffer_size 256k;
     proxy_busy_buffers_size 512k;
-
-    # Avoid caching issues
-    proxy_cache_bypass $http_upgrade;
   }
 
   # Serve Angular frontend
