--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
 
   # Proxy API requests to Node SSR Cloud Run backend
   location /api/ {
-    proxy_pass https://node-ssr-426000542377.europe-west3.internal.run.app;
+    proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
 
     proxy_http_version 1.1;
     proxy_ssl_server_name on;
