--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,14 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # SSL Certificates and other settings here
+  add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+  add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; frame-ancestors 'none'; base-uri 'self';" always;
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header X-Content-Type-Options "nosniff" always;
+  add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+  add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
   # Proxy API requests to Node SSR Cloud Run backend
   location /api/ {
     proxy_pass https://node-ssr-426000542377.europe-west3.run.app;
