--- a/Dockerfile.nginx
+++ b/Dockerfile.nginx
@@ -2,7 +2,8 @@
 FROM nginx:1.27
 
 # Copy Nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/nginx.conf
 
 # Copy built static frontend
 COPY dist/device-app/browser /usr/share/nginx/html
